--- a/PersonnelAccountingApp/MainWindow.xaml
+++ b/PersonnelAccountingApp/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PersonnelAccountingApp"
         mc:Ignorable="d"
-        Title="Учет персонала" Height="450" Width="800">
+        Title="Учет персонала" Height="450" Width="800" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.20*"/>
