--- a/PersonnelAccountingApp/View/AddEmployeesView.xaml
+++ b/PersonnelAccountingApp/View/AddEmployeesView.xaml
@@ -4,9 +4,29 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PersonnelAccountingApp.View"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib" 
         mc:Ignorable="d"
-        Title="AddEmployeesView" Height="450" Width="300">
+        Title="Добавление нового сотрудника" Height="450" Width="300" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Label>TEST</Label>
+        <TextBlock HorizontalAlignment="Left" Margin="28,51,0,0" TextWrapping="Wrap" Text="Фамилия" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="28,93,0,0" TextWrapping="Wrap" Text="Имя" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="28,138,0,0" TextWrapping="Wrap" Text="Отчество" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="28,185,0,0" TextWrapping="Wrap" Text="Дата рождения" VerticalAlignment="Top"/>
+        <TextBlock HorizontalAlignment="Left" Margin="28,265,0,0" TextWrapping="Wrap" Text="Должность" VerticalAlignment="Top"/>
+        <TextBox HorizontalAlignment="Left" Margin="135,51,0,0" TextWrapping="Wrap" Text="{Binding Surname}" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Margin="135,93,0,0" TextWrapping="Wrap" Text="{Binding Name}" VerticalAlignment="Top" Width="120"/>
+        <TextBox HorizontalAlignment="Left" Margin="135,137,0,0" TextWrapping="Wrap" Text="{Binding Middlename}" VerticalAlignment="Top" Width="120" />
+        <TextBox HorizontalAlignment="Left" Margin="135,183,0,0" TextWrapping="Wrap" Text="{Binding Birthdate}" VerticalAlignment="Top" Width="120"/>
+
+        <ComboBox HorizontalAlignment="Left" Margin="135,224,0,0" VerticalAlignment="Top" Width="120" ItemsSource="{Binding GenderEmployees}" Text="{Binding Gender}"/>
+        <TextBlock HorizontalAlignment="Left" Margin="28,229,0,0" TextWrapping="Wrap" Text="Пол" VerticalAlignment="Top"/>
+        <ComboBox HorizontalAlignment="Left" Margin="135,259,0,0" Text="{Binding Role}" VerticalAlignment="Top" Width="120" ItemsSource="{Binding RoleCollection}"/>
+
+
+        <Button Content="Создать" HorizontalAlignment="Left" Margin="79,350,0,0" 
+                VerticalAlignment="Top" Width="54" 
+                Click="Button_Create_Click" />
+        <Button Content="Отмена" HorizontalAlignment="Left" Margin="160,350,0,0" VerticalAlignment="Top" Width="54" IsCancel="True" Click="Button_Close_Click"/>
+        <TextBlock Text="Не все поля заполенены!" HorizontalAlignment="Center" Margin="0,326,0,0" VerticalAlignment="Top" Background="Red" FontSize="14" Height="18" Visibility="{Binding ErrorText}"/>
     </Grid>
 </Window>
